[package]
name = "rolling_norm"
version = "0.1.0"
edition = "2018"
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
categories = ["api-bindings"]
description = "Unofficial API Binding for the FTX Exchange."
keywords = ["exchange", "trading", "crypto", "market"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fabianboesiger/ftx"

[dependencies]
num-traits = "0.2"