[package]
name = "rolling_norm"
version = "0.3.0"
edition = "2018"
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
categories = ["data-structures", "science"]
description = "Computes the rolling mean, variance, standard derivation and norm."
keywords = ["rolling", "moving", "average", "mean", "norm"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fabianboesiger/rolling-norm"

[dependencies]
num-traits = "0.2"
